@@ -7,6 +7,13 @@ For more detailed instructions on filling in the ChangeLog form, see
 	* <changes go here...>
 
 ******************************************************************************
+post-6.2 release changes: 
+
+2002-09-25  Kevin Layer  <layer@crikey>
+
+	* fi-lep.el: bug12531: fix another fontification problem
+
+******************************************************************************
 2.3.5
 
 2002-04-11  Kevin Layer  <layer@crikey>
